	  MODIFIED flag in open_files->flags is included only once.
	  (DLR)
  do_writeout()
	- Refactor so that no recursion is needed if we try to exit with
	  a modified file that has no name when TEMP_OPT is set. (DLR)
  do_browser()
	- Call check_statblank() instead of blanking the statusbar
	  unconditionally, for consistency. (David Benbennick)
- nano.c:
  do_toggle(), finish()
	- Call blank_statusbar() and blank_bottombars() to blank out
	  the statusbar and shortcut list in bottomwin. (DLR)
  do_early_abort()
	- Removed, as it's no longer called anywhere. (David Benbennick)
  open_pipe()
	- Call enable_signals() at the beginning and disable_signals()
	  at the end, so that we get a SIGINT when Ctrl-C is pressed
	  during wait() and can then call cancel_fork() properly. (DLR)
  do_delete()
	- Tweak for efficiency. (David Benbennick)
  do_spell()
	- Tweak for efficiency. (David Benbennick)
	- Change the statusbar entries used in cases of failure so that
	  they all display the actual error that occurred. (David
	  Benbennick and DLR)
  do_int_speller(), do_alt_speller()
	- Make these functions return const char*'s instead of char*'s.
	  (David Benbennick)
  justify_format()
	- Remove redundant assignment. (DLR)
  do_para_search()
	- Remove unneeded edit_update() calls. (David Benbennick)
  do_justify()
	- Remove unneeded edit_update() calls, and add a few minor
	  efficiency tweaks. (David Benbennick)
	- Simplify an if statement. (DLR)
  do_exit()
	- Refactor so that no recursion is needed if we try to exit with
	  a modified file that has no name when TEMP_OPT is set. (DLR)
  print_numlock_warning()
	- Removed, as it's no longer needed and was never called
	  anywhere after the input overhaul. (DLR)
  signal_init()
	- Don't use termios and _POSIX_VDISABLE to disable keys anymore,
	  as there's no real equivalent of it when the latter isn't
	  defined. (DLR)
  handle_sigwinch()
	- Call resetty() to get the original terminal settings back.
	  (DLR)